Cleaned up warnings. #103